--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,13 @@
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
+
+      <form>
+        <input type="ccname" name="ccname" class="input">
+        <input type="cardnumber" name="cardnumber" class="input">
+        <input type="cvc" name="cvc" class="input">
+        <input type="cc-exp" name="cc-exp" class="input">
+      </form>
     </div>
   </body>
 </html>
